# jadepixana

./: CMakeLists.txt  ReadMe.md  lxplus_setup.sh
core/include/: JadeAnalysis.hh  JadeCluster.hh  JadeDataFrame.hh  JadeFilter.hh  JadeRun.hh
core/src/: JadeAnalysis.cc  JadeCluster.cc  JadeDataFrame.cc  JadeFilter.cc  JadeRead.cc  JadeRun.cc
data/: raw_pixel
etc/: cepcvtx_setup.sh  local_setup.sh  lxplus_setup.sh
exe/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
exe/core/: Makefile  cmake_install.cmake
exe/exe/: Makefile  cmake_install.cmake
exe/src/: AddTest.cxx  FindNoise.cxx  FitMultiplePeaks.cxx  FitPeaks.cxx  FitSim.cxx  FitTwoPeaks.cxx  GenClusSize.cxx  GenNoise.cxx  GenRaw.cxx  GenTest.cxx  GetFits.cxx  HistTest.cxx  ProjectNPixel.cxx  ProjectTest.cxx  RunTest.cxx
run/: WeakFe_ND_CHIPA1_1.root  add.sh  ana.py  anajob.sh  config.py  genNoise.py  genSize.py  job.sh  plot.c  run.py  run.sh  runSize.py  submit.sh
run/conf/: sample.json
run/config/: run0001.json
run/template/: Fe_CHIPA1_run00001.json  Fe_CHIPA2_run00001.json  Fe_CHIPA3_run00001.json  May_Sr_CHIPA1_run00001.json  May_Sr_CHIPA2_run00001.json  May_Sr_CHIPA3_run00001.json  May_Sr_CHIPA4_run00001.json  May_Sr_CHIPA7_run00001.json  Noise_CHIPA1_run00001.json  Sr_CHIPA1_run00001.json  Sr_CHIPA2_run00001.json  Sr_CHIPA3_run00001.json  WeakFe_CHIPA1_run00001.json  WeakFe_CHIPA2_run00001.json  WeakFe_CHIPA3_run00001.json  WeakFe_CHIPA4_run00001.json  WeakFe_CHIPA5_run00001.json  WeakFe_CHIPA5_run00015.json  WeakFe_CHIPA6_run00001.json  WeakFe_CHIPA7_run00001.json  WeakFe_CHIPA8_run00001.json  WeakFe_CHIPA9_run00001.json  WeakFe_ND_CHIPA1_run00001.json  WeakFe_ND_CHIPA2_run00001.json  WeakFe_ND_CHIPA3_run00001.json  sample.json  sampleTLU.json
